examples/datalog/32_math/09_log_function.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_log
Knowledge graph 'test_log' created.
Switched to knowledge graph: test_log
> .kg use test_log
Switched to knowledge graph: test_log
> +nums[(1,), (10,), (100,)].
Inserted 3 fact(s) into 'nums'.
> log_val(X, Y) :- nums(X), Y = LOG(X).
Script error: Parse error: Invalid term: 'LOG(X)'
